# nightsight

./: .gitignore  README.md  inference.py  requirements.txt  serialize.py  setup.py  test.py  train.py
app/: .gitignore  CMakeLists.txt  README.md  checkpoints  config.h.in  inference.cpp  serialize.py  traced_EnhanceNetNoPool.pt
app/scripts/: build.sh  configure.sh
app/src/: enhance.cpp  main.cpp
checkpoints/: state_dict--epoch=30.ckpt
gui/: inference.py  stacked_gui_display.py
nightsight/: data.py  data_test.py  log.py  log_test.py  loss.py  loss_test.py  model.py  model_test.py  utils.py
scripts/: inference.sh  setup.sh  test.sh  venv.sh
